--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 .bg-img {
   /* The image used */
-  background-image: url("/Photos/Ramanujar-26.jpg");
+  background-image: url("Ramanujar-26.jpg");
 
   min-height: 750px;
 
@@ -226,14 +226,14 @@ div.scrollmenu a:hover {
 
 <center>
 
-<marquee style="z-index:2;position:absolute;left:845px;top:68px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:702px;" scrollamount="4" direction="down"><img src="/Photos/sunflower12-removebg-preview.png"alt="ARV poosari3" width="20" height="20"></marquee>
-<marquee style="z-index:2;position:absolute;left:898px;top:95px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:561px;" scrollamount="7" direction="down"><img src="/Photos/sunflower12-removebg-preview.png"alt="ARV poosari3" width="20" height="20"></marquee>
+<marquee style="z-index:2;position:absolute;left:845px;top:68px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:702px;" scrollamount="4" direction="down"><img src="sunflower12-removebg-preview.png"alt="ARV poosari3" width="20" height="20"></marquee>
+<marquee style="z-index:2;position:absolute;left:898px;top:95px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:561px;" scrollamount="7" direction="down"><img src="sunflower12-removebg-preview.png"alt="ARV poosari3" width="20" height="20"></marquee>
 
-<marquee style="z-index:2;position:absolute;left:845px;top:68px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:702px;" scrollamount="4" direction="down"><img src="/Photos/sunflower12-removebg-preview.png"alt="ARV poosari3" width="20" height="20"></marquee>
-<marquee style="z-index:2;position:absolute;left:898px;top:95px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:561px;" scrollamount="7" direction="down"><img src="/Photos/sunflower12-removebg-preview.png"alt="ARV poosari3" width="20" height="20"></marquee>
-<marquee style="z-index:2;position:absolute;left:678px;top:85px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:725px;" scrollamount="3" direction="down"><img src="/Photos/sunflower12-removebg-preview.png"alt="ARV poosari3" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:718px;top:57px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:650px;" scrollamount="5" direction="down"><img src="/Photos/sunflower12-removebg-preview.png"alt="ARV poosari3" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:918px;top:97px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:690px;" scrollamount="2" direction="down"><img src="/Photos/sunflower12-removebg-preview.png"alt="ARV poosari3" width="20" height="20"></marquee>
+<marquee style="z-index:2;position:absolute;left:845px;top:68px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:702px;" scrollamount="4" direction="down"><img src="sunflower12-removebg-preview.png"alt="ARV poosari3" width="20" height="20"></marquee>
+<marquee style="z-index:2;position:absolute;left:898px;top:95px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:561px;" scrollamount="7" direction="down"><img src="sunflower12-removebg-preview.png"alt="ARV poosari3" width="20" height="20"></marquee>
+<marquee style="z-index:2;position:absolute;left:678px;top:85px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:725px;" scrollamount="3" direction="down"><img src="sunflower12-removebg-preview.png"alt="ARV poosari3" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:718px;top:57px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:650px;" scrollamount="5" direction="down"><img src="sunflower12-removebg-preview.png"alt="ARV poosari3" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:918px;top:97px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:690px;" scrollamount="2" direction="down"><img src="/sunflower12-removebg-preview.png"alt="ARV poosari3" width="20" height="20"></marquee>
   
   <marquee style="z-index:2;position:absolute;left:318px;top:97px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:600px;" scrollamount="3" direction="down"><img src="/Photos/sunflower12-removebg-preview.png"alt="ARV poosari3" width="20" height="20"></marquee>
   <marquee style="z-index:2;position:absolute;left:411px;top:89px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:700px;" scrollamount="7" direction="down"><img src="/Photos/sunflower12-removebg-preview.png"alt="ARV poosari3" width="20" height="20"></marquee>
