--- a/index.html
+++ b/index.html
@@ -206,14 +206,14 @@ div.scrollmenu a:hover {
 <body>
 <div class="navbar">
  <a href="index.html">Home</a>
-  <a href="8th Maths 20 one mark.html">8th Maths 20 Q One Mark</a>
+<!--  <a href="8th Maths 20 one mark.html">8th Maths 20 Q One Mark</a>
   <a href="GK for MM.html">GK</a>
    <a href="1airforce.html">Airforce-1</a> 
   <a href="05.06.25 To Check NEET AA 2018.html">NEET 2018</a>
   <a href="2018 CC Req with Ans.html">2018 CC NEET</a>
   <a href="airforce.html">Airforce</a> 
     <a href="Dentist mobile view index.html">Dentist Mobile view</a> 
-    <a href="mobile view website.html">Mobile View</a>  
+    <a href="mobile view website.html">Mobile View</a>  --->
  
     </div>
   </div> 
