--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 
-<title>myseconddesignsweb.netly.space|myseconddesignsweb.netly.spacek</title>
+<title></title>
 <title>  </title>
 <title>  </title>
 <title>  </title>
@@ -22,8 +22,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-<meta name="description" content="mannen mannan ,mannan mannen ,mannen mannen quiz,mannen mannan Good Morning,Good morning images,mannan Mannan Mannen,Mannan,Mannar Mannan,Mannan Mannar,Sivaji Quiz,Kamal quiz,Cinima Quiz" />
-<meta name="keywords" content="mannen mannan ,mannan mannen ,mannen mannen quiz,mannen mannan Good Morning,Good morning images,Mannan,Mannen,Manan Manen,Mannan Mannen,Mannar Mannen,Mannan Mannar,Mannan Quiz,Fun Quiz,Sivaji Quiz,Shivaji Quiz,Shivaji,sivaji,kamal,Kamal quiz,à®•à®®à®²à¯ à®ªà®±à¯à®±à®¿ à®•à¯‡à®³à¯à®µà®¿ à®ªà®¤à®¿à®²à¯à®•à®³à¯,Rajini quiz,Quiz about Suriya,Fun Quiz in Tamil,Suriya Quiz,à®µà®¿à®©à®¾ à®µà®¿à®Ÿà¯ˆ About Tamilnadu Politics,Cinima Quiz,GK Quiz,Vijai Quiz,Sivakarthikeyan Quiz,Dhanush Quiz,à®šà®¿à®µà®•à®¾à®°à¯à®¤à¯à®¤à®¿à®•à®¯à¯‡à®©à¯ à®ªà®±à¯à®±à®¿ à®•à¯‡à®³à¯à®µà®¿ à®ªà®¤à®¿à®²à¯à®•à®³à¯,à®…à®œà®¿à®¤à¯ à®ªà®±à¯à®±à®¿ à®•à¯‡à®³à¯à®µà®¿ à®ªà®¤à®¿à®²à¯à®•à®³à¯,à®µà®¿à®œà®¯à¯ à®ªà®±à¯à®±à®¿ à®•à¯‡à®³à¯à®µà®¿ à®ªà®¤à®¿à®²à¯à®•à®³à¯,à®šà¯‚à®°à¯à®¯à®¾ à®ªà®±à¯à®±à®¿ à®•à¯‡à®³à¯à®µà®¿ à®ªà®¤à®¿à®²à¯à®•à®³à¯,à®¤à®² ,à®¤à®³à®ªà®¤à®¿,à®¤à®² à®ªà®±à¯à®±à®¿ à®•à¯‡à®³à¯à®µà®¿ à®ªà®¤à®¿à®²à¯à®•à®³à¯ ,à®¤à®³à®ªà®¤à®¿ à®ªà®±à¯à®±à®¿ à®•à¯‡à®³à¯à®µà®¿ à®ªà®¤à®¿à®²à¯à®•à®³à¯ ,à®šà®¿à®µà®¾à®œà®¿ à®ªà®±à¯à®±à®¿ à®•à¯‡à®³à¯à®µà®¿ à®ªà®¤à®¿à®²à¯à®•à®³à¯ ,à®šà®¿à®µà®¾à®œà®¿ ,à®•à®®à®²à¯ , à®•à®®à®²à¯ à®ªà®±à¯à®±à®¿ à®•à¯‡à®³à¯à®µà®¿ à®ªà®¤à®¿à®²à¯à®•à®³à¯ ,à®°à®œà®¿à®©à®¿ à®ªà®±à¯à®±à®¿ à®•à¯‡à®³à¯à®µà®¿ à®ªà®¤à®¿à®²à¯à®•à®³à¯ ,à®°à®œà®¿à®©à®¿ " />
+<meta name="description" content=" />
+<meta name="keywords" content=""/>
 <meta name="google-site-verification" content="F_E9UZXH3MjTrBzK-XnMFhwQ_ua-dUbC5Rn8IXk7Kr0" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
@@ -206,14 +206,7 @@ div.scrollmenu a:hover {
 <body>
 <div class="navbar">
  <a href="index.html">Home</a>
-<!--  <a href="8th Maths 20 one mark.html">8th Maths 20 Q One Mark</a>
-  <a href="GK for MM.html">GK</a>
-   <a href="1airforce.html">Airforce-1</a> 
-  <a href="05.06.25 To Check NEET AA 2018.html">NEET 2018</a>
-  <a href="2018 CC Req with Ans.html">2018 CC NEET</a>
-  <a href="airforce.html">Airforce</a> 
-    <a href="Dentist mobile view index.html">Dentist Mobile view</a> 
-    <a href="mobile view website.html">Mobile View</a>  --->
+
  
     </div>
   </div> 
