--- a/index.html
+++ b/index.html
@@ -207,6 +207,9 @@ div.scrollmenu a:hover {
 <div class="navbar">
  <a href="index.html">Home</a>
 
+   <a href="1airforce.html">Airforce </a>
+   <a href="07.06.25 Neet 2018.html">Neet With Time Reminder <br>Choice to Not Attend</a>
+   <a href="2018 CC Req with Ans.html">Neet</a>
  
     </div>
   </div> 
