--- a/1airforce.html
+++ b/1airforce.html
@@ -9,7 +9,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 .bg-img {
   /* The image used */
-  background-image: url("F:/for Website Photos/For Website BG image/sky.jpg");
+  background-image: url("sky.jpg");
 
   min-height: 680px;
 
@@ -200,21 +200,19 @@ marquee {
          }
       </style>
   
-  <marquee behavior="scroll" direction="left" scrollamount="17"><img src=
-  "Photos\Aeroplane1-removebg-preview.png"></marquee>
-  "Photos\Aeroplane1-removebg-preview.png"></marquee>
-  <marquee behavior="scroll" direction="left" scrollamount="30"><img src="Photos\Aeroplane1-removebg-preview.png"></marquee>
-  <marquee behavior="scroll" direction="left" scrollamount="10"><img src="Photos\Aeroplane1-removebg-preview.png"></marquee>
+  <marquee behavior="scroll" direction="left" scrollamount="17"><img src= "Aeroplane1-removebg-preview.png"></marquee>
+  
+  <marquee behavior="scroll" direction="left" scrollamount="30"><img src="Aeroplane1-removebg-preview.png"></marquee>
+  <marquee behavior="scroll" direction="left" scrollamount="10"><img src="Aeroplane1-removebg-preview.png"></marquee>
   
   
 <marquee direction="down" width="250" height="200" behavior="alternate" style="border-bottom-color =REd" "background-color=lightblue">
   <marquee behavior="alternate">
- <img src="Photos\Aeroplane1-removebg-preview.png">
-  </marquee>
+ <img src="Aeroplane1-removebg-preview.png">  </marquee>
 </marquee>
-  <marquee behavior="scroll" direction="left" scrollamount="45"><img src="Photos\Aeroplane1-removebg-preview.png"></marquee>
-  <marquee behavior="scroll" direction="left" scrollamount="30"><img src="Photos\Aeroplane1-removebg-preview.png"></marquee>
-  <marquee behavior="scroll" direction="left" scrollamount="55"><img src="F:\for Website Photos\For Website BG image\Aeroplane1-removebg-preview.png"></marquee>
+  <marquee behavior="scroll" direction="left" scrollamount="45"><img src="Aeroplane1-removebg-preview.png"></marquee>
+  <marquee behavior="scroll" direction="left" scrollamount="30"><img src="Aeroplane1-removebg-preview.png"></marquee>
+  <marquee behavior="scroll" direction="left" scrollamount="55"><img src="Aeroplane1-removebg-preview.png"></marquee>
   
   <br>
   <br>
@@ -223,41 +221,41 @@ marquee {
   
 <center>
 
-<marquee style="z-index:2;position:absolute;left:845px;top:68px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:702px;" scrollamount="4" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-<marquee style="z-index:2;position:absolute;left:898px;top:95px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:561px;" scrollamount="7" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+<marquee style="z-index:2;position:absolute;left:845px;top:68px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:702px;" scrollamount="4" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+<marquee style="z-index:2;position:absolute;left:898px;top:95px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:561px;" scrollamount="7" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
 
-<marquee style="z-index:2;position:absolute;left:845px;top:68px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:702px;" scrollamount="4" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-<marquee style="z-index:2;position:absolute;left:898px;top:95px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:561px;" scrollamount="7" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-<marquee style="z-index:2;position:absolute;left:678px;top:85px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:725px;" scrollamount="3" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:718px;top:57px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:650px;" scrollamount="5" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:918px;top:97px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:690px;" scrollamount="2" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+<marquee style="z-index:2;position:absolute;left:845px;top:68px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:702px;" scrollamount="4" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+<marquee style="z-index:2;position:absolute;left:898px;top:95px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:561px;" scrollamount="7" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+<marquee style="z-index:2;position:absolute;left:678px;top:85px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:725px;" scrollamount="3" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:718px;top:57px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:650px;" scrollamount="5" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:918px;top:97px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:690px;" scrollamount="2" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
   
-  <marquee style="z-index:2;position:absolute;left:318px;top:97px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:600px;" scrollamount="3" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:411px;top:89px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:700px;" scrollamount="7" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:500px;top:7px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:702px;" scrollamount="4" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:525px;top:83px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:671px;" scrollamount="3" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:605px;top:53px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:517px;" scrollamount="2" direction="down"><img src="/Photos/parachute diving.png" alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:368px;top:69px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:569px;" scrollamount="1" direction="down"><img src="/Photos/parachute diving.png" alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:430px;top:117px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:489px;" scrollamount="7" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:576px;top:57px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:478px;" scrollamount="7" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:516px;top:57px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:456px;" scrollamount="5" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:300px;top:86px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:594px;" scrollamount="2" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:692px;top:10px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:551px;" scrollamount="6" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:578px;top:74px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:654px;" scrollamount="1" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:421px;top:72px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:682px;" scrollamount="3" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:376px;top:32px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:70px;" scrollamount="8" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:472px;top:15px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:334px;" scrollamount="11" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:390px;top:38px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:167px;" scrollamount="7" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:375px;top:108px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:375px;" scrollamount="7" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:322px;top:76px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:12px;" scrollamount="7" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:389px;top:54px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:366px;" scrollamount="2" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:426px;top:72px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:358px;" scrollamount="1" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:423px;top:44px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:630px;" scrollamount="3" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee> 
-  <marquee style="z-index:2;position:absolute;left:550px;top:108px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:375px;" scrollamount="7" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:635px;top:76px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:625px;" scrollamount="7" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:700px;top:54px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:366px;" scrollamount="2" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:555px;top:72px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:358px;" scrollamount="1" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
-  <marquee style="z-index:2;position:absolute;left:480px;top:44px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:675px;" scrollamount="3" direction="down"><img src="/Photos/parachute diving.png"alt="parachute diving" width="20" height="20"></marquee> 
+  <marquee style="z-index:2;position:absolute;left:318px;top:97px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:600px;" scrollamount="3" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:411px;top:89px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:700px;" scrollamount="7" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:500px;top:7px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:702px;" scrollamount="4" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:525px;top:83px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:671px;" scrollamount="3" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:605px;top:53px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:517px;" scrollamount="2" direction="down"><img src="parachute diving.png" alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:368px;top:69px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:569px;" scrollamount="1" direction="down"><img src="parachute diving.png" alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:430px;top:117px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:489px;" scrollamount="7" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:576px;top:57px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:478px;" scrollamount="7" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:516px;top:57px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:456px;" scrollamount="5" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:300px;top:86px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:594px;" scrollamount="2" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:692px;top:10px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:551px;" scrollamount="6" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:578px;top:74px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:654px;" scrollamount="1" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:421px;top:72px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:682px;" scrollamount="3" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:376px;top:32px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:70px;" scrollamount="8" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:472px;top:15px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:334px;" scrollamount="11" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:390px;top:38px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:167px;" scrollamount="7" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:375px;top:108px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:375px;" scrollamount="7" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:322px;top:76px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:12px;" scrollamount="7" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:389px;top:54px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:366px;" scrollamount="2" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:426px;top:72px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:358px;" scrollamount="1" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:423px;top:44px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:630px;" scrollamount="3" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee> 
+  <marquee style="z-index:2;position:absolute;left:550px;top:108px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:375px;" scrollamount="7" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:635px;top:76px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:625px;" scrollamount="7" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:700px;top:54px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:366px;" scrollamount="2" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:555px;top:72px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:358px;" scrollamount="1" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee>
+  <marquee style="z-index:2;position:absolute;left:480px;top:44px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:675px;" scrollamount="3" direction="down"><img src="parachute diving.png"alt="parachute diving" width="20" height="20"></marquee> 
 
 <body>
 
