--- a/1airforce.html
+++ b/1airforce.html
@@ -10,7 +10,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 .bg-img {
   /* The image used */
   background-image: url("sky.jpg");
-
+  min-width: 750px;
   min-height: 880px;
 
   /* Center and scale the image nicely */
