--- a/1airforce.html
+++ b/1airforce.html
@@ -10,7 +10,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 .bg-img {
   /* The image used */
   background-image: url("sky.jpg");
-  min-width: 750px;
+  min-width: 650px;
   min-height: 880px;
 
   /* Center and scale the image nicely */
@@ -258,7 +258,7 @@ marquee {
   <marquee style="z-index:2;position:absolute;left:480px;top:44px;font-family:Cursive;font-size:14pt;color:#ffcc00;height:675px;" scrollamount="3" direction="down"><img src="1parachute diving.png"alt="parachute diving" width="20" height="20"></marquee> 
 
 <body>
-
+  <marquee behavior="scroll" direction="left" scrollamount="10">நாட்டுக்காக உழைத்த ........உழைத்து கொண்டு உள்ள ........உழைக்க இருக்கின்ற.......... ராணுவ வீரர்களுக்கு நெஜர்ந்த வீர வணக்கங்கள்</marquee>
 
 <button onclick="topFunction()" id="myBtn" title="Go to top">Page<br> Top</button>
 
