--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   /* The image used */
   background-image: url("Ramanujar-26.jpg");
 
-  min-height: 750px;
+  min-height: 650px;
 
   /* Center and scale the image nicely */
   background-position: center;
@@ -210,7 +210,10 @@ div.scrollmenu a:hover {
    <a href="1airforce.html">Airforce </a>
    <a href="07.06.25 Neet 2018.html">Neet With Time Reminder <br>Choice to Not Attend</a>
    <a href="2018 CC Req with Ans.html">Neet</a>
- 
+
+   <a href="Dentist mobile view index.html">Dentist Mobile view </a>
+   <a href="  ">===</a>
+   <a href="mobile view.html">mobile view Click here</a>
     </div>
   </div> 
 </div>
