Update 19.06.25 Neet live correction.html

--- a/19.06.25 Neet live correction.html
+++ b/19.06.25 Neet live correction.html
@@ -30,7 +30,7 @@ border: 2px solid white;
 padding: 5px;
 height: 250px;
 background: beige;
-background-image: url("Tom-Jerry-tv-06.jpg");
+background-image: url("Ramanujar-26.jpg");
 color: white;
 }
 
@@ -291,7 +291,7 @@ body {
  The ratio of work done by the gas,<br>
       to the heat absorbed by it, when it<br>
  undergoes a change frorr state A to state B, is ?<br>
-<img src="2018 Neet DD Q23 Diagram.png " alt = "2018 Neet DD Q23 Diagram " height="175" width="275"> </h2>
+<img src="2018 Neet DD Q23 Diagram.png" alt = "2018 Neet DD Q23 Diagram " height="175" width="275"> </h2>
 <h3><label for="ans1">A<input type="radio" name="ans1" value="-1" id="ans1" />$$ 1\over3$$  </label></h3>
 <h3><label for="ans0101">B<input type="radio" name="ans1" value="-1" id="ans0101" />$$ 2\over 3 $$	</label></h3>
 <h4><label for="ans0102">C<input type="radio" name="ans1" value="4" id="ans0102" />$$ 2\over5$$  </label></h4>
