--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@ div.scrollmenu a:hover {
    <a href="19.06.25 Neet live correction.html">Neet 2018 AA</a>
 
    <a href="Dentist mobile view index.html">Dentist Mobile view </a>
-   <a href="  ">===</a>
+   <a href="Dentist mobile view index.html">===</a>
+   <a href="mobile view.html">M</a>
    <a href="mobile view.html">mobile view Click here</a>
     </div>
   </div> 
